# EulerCPP

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.ps1  build.sh
examples/cylinder/: cylinder.inp  cylinder.msh
examples/explosion/: explosion.inp  explosion.msh
examples/nozzle/: nozzle.inp
examples/sodtube/: sodtube.inp  sodtube.msh  sodtubeHD.msh
include/eulercpp/input/: input.hpp  input_helpers.hpp  load_bc.hpp  load_fluid.hpp  load_init.hpp  load_input.hpp  load_logger.hpp  load_mesh.hpp  load_numerical.hpp  load_output.hpp  load_physics.hpp
include/eulercpp/math/: gradients.hpp  limiters.hpp  reconstruction.hpp  solution_update.hpp  time_utils.hpp  vectors.hpp
include/eulercpp/mesh/: distances.hpp  elements.hpp  faces.hpp  mesh.hpp  nodes.hpp  normals.hpp  shapes.hpp
include/eulercpp/output/: logger.hpp  probes.hpp  reports.hpp  restart.hpp  write_csv.hpp  write_vtk.hpp  writer.hpp
include/eulercpp/physics/: axisymmetric.hpp  boundaries.hpp  corrections.hpp  fluxes.hpp  riemann.hpp  sources.hpp  timestep.hpp
include/eulercpp/physics/boundaries/: all_boundaries.hpp  pressure_outlet.hpp  stagnation_inlet.hpp  subsonic_inlet.hpp  supersonic_inlet.hpp  supersonic_outlet.hpp  symmetry.hpp
include/eulercpp/simulation/: fields.hpp  initialization.hpp  preprocess.hpp  signal_handler.hpp  simulation.hpp  solve.hpp  status.hpp
src/: main.cpp
src/input/: input.cpp  input_helpers.cpp  load_bc.cpp  load_fluid.cpp  load_init.cpp  load_logger.cpp  load_mesh.cpp  load_numerical.cpp  load_output.cpp  load_physics.cpp
src/math/: gradients.cpp  reconstruction.cpp  solution_update.cpp  vectors.cpp
src/mesh/: distances.cpp  elements.cpp  faces.cpp  mesh.cpp  nodes.cpp  normals.cpp  shapes.cpp
src/output/: logger.cpp  probes.cpp  reports.cpp  restart.cpp  write_csv.cpp  write_vtk.cpp  writer.cpp
src/physics/: axisymmetric.cpp  boundaries.cpp  corrections.cpp  fluxes.cpp  riemann.cpp  sources.cpp  timestep.cpp
src/physics/boundaries/: pressure_outlet.cpp  stagnation_inlet.cpp  subsonic_inlet.cpp  supersonic_inlet.cpp  supersonic_outlet.cpp  symmetry.cpp
src/simulation/: initialization.cpp  preprocess.cpp  solve.cpp
